--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
           <a id="forkme_banner" href="https://github.com/sbarski/dashing.net">View on GitHub</a>
 
           <h1 id="project_title">dashing.net</h1>
-          <h2 id="project_tagline">dashing.net is a direct .NET port of the dashing framework originally created by Shopify</h2>
+          <h2 id="project_tagline">dashing.net is a direct .net port of the dashing framework originally created by Shopify</h2>
 
             <section id="downloads">
               <a class="zip_download_link" href="https://github.com/sbarski/dashing.net/zipball/master">Download this project as a .zip file</a>
@@ -47,13 +47,13 @@
 
 <h1></h1>
 
-<p>dashing.net is a direct .NET port of the <a href="http://shopify.github.com/dashing">dashing</a> framework originally created by Shopify.</p>
+<p>dashing.net is a direct .net port of the <a href="http://shopify.github.com/dashing">dashing</a> framework originally created by Shopify.</p>
 
 <p><a href="http://shopify.github.com/dashing">Check out the dashing homepage</a>.</p>
 
 <p>dashing.net allows you to create beautiful dashboards &amp; widgets using html/scss/coffeescript/c#. The dashboard itself is written with asp.net web api/mvc 4. </p>
 
-<p>We have tried to re-use as much code as possible from dashing to preserve compatibility. Therefore most of the behaviours and conventions used in dashing.net should be identical or closely mirrored to dashing. All widget frontend files (html,scss and coffeescript) can be used directly. Jobs, however, need to be re-implemented with .net in-mind.</p>
+<p>We have tried to re-use as much code as possible from dashing to preserve compatibility. Therefore most of the behaviours and conventions used in dashing.net should be identical or closely mirrored to dashing. All widget frontend files (html, scss and coffeescript) can be used directly. Jobs, however, need to be re-implemented in C# or another compatible .net language.</p>
 
 <p><a href="http://dashingdotnet.azurewebsites.net/">See an example of dashing.net running in Windows Azure</a></p>
 
