--- a/index.html
+++ b/index.html
@@ -47,6 +47,8 @@
 
 <h1></h1>
 
+<p><strong><a href="http://dashingdotnet.azurewebsites.net/">See an example of dashing.net running in Windows Azure</a></strong></p>
+
 <p>dashing.net is a direct .net port of the <a href="http://shopify.github.com/dashing">dashing</a> framework originally created by Shopify.</p>
 
 <p><a href="http://shopify.github.com/dashing">Check out the dashing homepage</a>.</p>
@@ -55,7 +57,7 @@
 
 <p>We have tried to re-use as much code as possible from dashing to preserve compatibility. Therefore most of the behaviours and conventions used in dashing.net should be identical or closely mirrored to dashing. All widget frontend files (html, scss and coffeescript) can be used directly. Jobs, however, need to be re-implemented in C# or another compatible .net language.</p>
 
-<p><a href="http://dashingdotnet.azurewebsites.net/">See an example of dashing.net running in Windows Azure</a></p>
+
 
 <h1>License</h1>
 
